# AutomationBots

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_cli.py
AutomationBots/: ArXivSearcher.py  SeleniumInitializer.py  __init__.py  cli.py  random_folder_opener.py
AutomationBots/LinkedInHelper/: __init__.py  cli.py  scraper.py
cli/: cli.py
examples/: track_jobs.py
linkedin_job_tracker/: __init__.py  cli.py  scraper.py
notebooks/: Google.ipynb  i.ipynb  robinhood.ipynb
