[project]
name = "AutomationBots"
version = "0.1.0"
description = "A collection of automation bots."
authors = [
    { name = "weiyang2048", email = "weiyang2048@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.0",
    "loguru>=0.6.0",
    "bs4>=0.0.1",
    "requests>=2.28.1",
    "pre-commit",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 